--- a/src/style.css
+++ b/src/style.css
@@ -2242,25 +2242,20 @@ input:required {
 .single-portfolio-content .hover-content a {
   position: absolute;
   top: 50%;
-  left: 50%;
-  margin-top: 0;
-  margin-left: -26px;
   z-index: 100;
   display: inline-block;
-  width: 52px;
-  height: 52px;
-  border-radius: 50%;
-  background-color: #fc6060;
+  width: 100%;
+  height: 100%;
   text-align: center;
   line-height: 52px;
-  font-size: 30px;
+  font-size: 18px;
   color: #ffffff;
 }
 
-.single-portfolio-content .hover-content a:hover,
+/* .single-portfolio-content .hover-content a:hover,
 .single-portfolio-content .hover-content a:focus {
   background-color: #000000;
-}
+} */
 
 .single-portfolio-content:hover img,
 .single-portfolio-content:focus img {
